# siabsen

./: .dockerignore  .gitignore  Dockerfile  app.py  compose.yml  create_superadmin.py  pyproject.toml  startup.sh  tailwind.config.js
absen/: __init__.py  admin.py  guards.py  models.py  plugins.py
absen/routes/: attendance.py  index.py  school.py
absen/templates/: base.html
absen/templates/admin/: home.html
absen/templates/macro/: forms.html
absen/templates/pages/: firstrun.html  index.html  login.html
absen/templates/pages/attendance/: index.html
absen/templates/pages/school/: index.html
migrations/versions/: 14710db66d97_.py  1f60fc515492_.py  33e5d6f42d67_.py
